# bazi_fortune_app

./: .gitignore  IMPLEMENTATION_GUIDE.md  Makefile  README.md  TESTING_GUIDE.md  pubspec.yaml
.codebuddy/: analysis-summary.json
admin/: .env  package-lock.json  package.json
aicore/: .env.example  API_Documentation.md  README.md  pyproject.toml  run.py  simple_verification.py  verify_functionality.py
aicore/app/: __init__.py  main.py
aicore/app/api/: astrology.py
aicore/app/core/: config.py
aicore/app/models/: astrology.py
aicore/app/services/: astrology_service.py
aicore/cache/: kerykeion_geonames_cache.sqlite
aicore/tests/: test_astrology.py
android/: local.properties
backend/: .gitignore  README.md  config.example.yaml  go.mod  go.sum  main.go  test_database.go  test_database_mock.go  test_models.go  test_models_comprehensive.go  test_models_simple.go
docs/: ASTROLOGY_IMPLEMENTATION_COMPLETE.md  BAZI_APP_PLAN.md  CLAUDE.md  PAYMENT_MEMBERSHIP_ARCHITECTURE.md  README.md  backend-migration-plan.md  八字算命多平台应用系统.md
fronted/: FLUTTER_LUNAR_INTEGRATION_COMPLETE.md  FLUTTER_LUNAR_INTEGRATION_GUIDE.md  MASTER_MANAGEMENT_PRD.md  README.md  pubspec.yaml
lib/: main.dart
linux/: CMakeLists.txt
scripts/: BUILD_GUIDE.md  README.md  build.ps1  build.sh
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
workers-api/: .dev.vars  GLM46_INTEGRATION_SUMMARY.md  LUNAR_INTEGRATION_DEMO.md  README.md  deploy.sh  package-lock.json  package.json  test-glm46-module.js  test-glm46.js  test-lunar-integration.js  tsconfig.json  (+2 more)
(+291 files in other folders)
